# tftag-pipeline

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  git_pass.txt  pyproject.toml
docs/: user-manual.md
src/tftag/: __init__.py  annotate.py  cclmoff.py  cli.py  cli_parsers.py  codon_usage.py  coords.py  design.py  editing.py  efficiency.py  genome_io.py  helpers.py  homology.py  off_targeting.py  offtarget.py  pipeline.py  primers.py  ranking.py  reporting.py  runlog.py  scan.py  select.py  splicecheck.py  status.py  stockcheck.py  storage.py  straincheck.py  termini_gRNAs.py  utils.py
